fix: improve long-term chart readability

--- a/src/main/resources/static/css/investment-chart.css
+++ b/src/main/resources/static/css/investment-chart.css
@@ -114,7 +114,8 @@
     }
 
     .chart-wrapper {
-        height: 310px;
-        padding: 10px;
+        position: relative;
+        width: 100%;
+        height: 450px;
     }
 }
